--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,13 @@
-<div class="boxcontainer">
-    <p>home works!</p>
+<div class="container px-4">
+    <div class="row py-3 justify-content-start">
+        <div class="col-2">
+            <button type="button" class="btn btn-primary" [disabled]="!(boxOathTokenService.isAuthenticated$ | async) || (schemaPresent$ | async)" (click)="onCreateScheme()">Create Schema</button>
+        </div>
+        <div class="col-2">
+            <button type="button" class="btn btn-primary" [disabled]="!(boxOathTokenService.isAuthenticated$ | async) || !(schemaPresent$ | async)" (click)="onDeleteScheme()">Delete Schema</button>
+        </div>
+        <div class="col d-flex align-items-left">
+            <span *ngIf="schemaMessage$ | async as schemeMessage" class="text-left d-flex align-items-center">{{ schemeMessage }}</span>
+        </div>
+    </div>
 </div>
