Started Metadata (Native)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
           <li class="nav-item">
             <a class="nav-link actve" routerLink="/content-upload-metadata" routerLinkActive="active" ariaCurrentWhenActive="page">Upload with Metadata</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link actve" routerLink="/list-contracts" routerLinkActive="active" ariaCurrentWhenActive="page">List Contracts</a>
+          </li>
         </ul>
         <form class="d-flex">
           <button class="btn btn-outline-success" type="button" (click)="doLogin()">Box Login</button>
