--- a/src/app/pages/content-preview-demo/content-preview-demo.component.html
+++ b/src/app/pages/content-preview-demo/content-preview-demo.component.html
@@ -1,8 +1,8 @@
 <div class="p3">
     <div class="row">
-        <app-box-file-input (fileId)="onFileIdChange($event)"></app-box-file-input>
+        <app-box-file-input  (selectingFile)="onSelectingFile($event)" (fileId)="onFileIdChange($event)"></app-box-file-input>
     </div>
     <div class="row">
-        <content-preview  [entityId]="fileId" [accessToken]="(boxOAuthService.accessToken$ | async) ?? ''" [options]="options"></content-preview>
+        <content-preview  *ngIf="showPreview" [entityId]="fileId" [accessToken]="(boxOAuthService.accessToken$ | async) ?? ''" [options]="options"></content-preview>
     </div>
 </div>
