--- a/src/app/components/box-file-input/box-file-input.component.html
+++ b/src/app/components/box-file-input/box-file-input.component.html
@@ -3,4 +3,12 @@
         <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="flex: 0 0 auto;" (click)="onSelectFile()">Select File</button>
         <input type="text" [formControl]='fileName' class="form-control border-0" placeholder="File Name" aria-label="File Name" readonly style="flex: 1 1 auto;">
     </div>
+    <div id="pickerdialog">
+        <content-picker 
+            componentId="pickerdialog" 
+            entityId="0" 
+            [accessToken]="(boxOauthTokenService.accessToken$ | async) ?? ''">
+        </content-picker>
+    </div>
+        
 </div>
