Added toasts, download, delete, lock, unlock, and preview to contracts list

--- a/src/app/components/box-folder-input/box-folder-input.component.html
+++ b/src/app/components/box-folder-input/box-folder-input.component.html
@@ -12,7 +12,7 @@
 </ng-template>
 <div class="p-3 m-0 border-0 bd-example m-0 border-0">
     <div class="input-group mb-3">
-        <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="flex: 0 0 auto;" (click)="open(content)">Select File</button>
-        <input type="text" [formControl]='folderName' class="form-control border-0" placeholder="File Name" aria-label="File Name" readonly style="flex: 1 1 auto;">
+        <button class="btn btn-outline-secondary" type="button" id="button-addon2" style="flex: 0 0 auto;" (click)="open(content)">Select Folder</button>
+        <input type="text" [formControl]='folderName' class="form-control border-0" placeholder="Folder Name" aria-label="File Name" readonly style="flex: 1 1 auto;">
     </div>
 </div>
