--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-toast aria-live="polite" aria-atomic="true"></app-toast>
 <div class="container-fluid">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
