--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,10 +18,10 @@
             <a class="nav-link actve" routerLink="/content-preview" routerLinkActive="active" ariaCurrentWhenActive="page">Preview</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link actve" routerLink="/content-upload-metadata" routerLinkActive="active" ariaCurrentWhenActive="page">Upload with Metadata</a>
+            <a class="nav-link actve" routerLink="/list-contracts" routerLinkActive="active" ariaCurrentWhenActive="page">List Contracts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link actve" routerLink="/list-contracts" routerLinkActive="active" ariaCurrentWhenActive="page">List Contracts</a>
+            <a class="nav-link actve" routerLink="/list-signature-requests" routerLinkActive="active" ariaCurrentWhenActive="page">List Signature Requests</a>
           </li>
         </ul>
         <form class="d-flex">
