--- a/src/app/components/create-signature-request/create-signature-request.component.html
+++ b/src/app/components/create-signature-request/create-signature-request.component.html
@@ -1,1 +1,10 @@
-<p>create-signature-request works!</p>
+<div class="modal-header">
+    <h4 class="modal-title">Create Signature</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="cancel()"></button>
+</div>
+<div class="modal-body">
+    <p>Hello</p>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-outline-secondary" (click)="close()">Close</button>
+</div>
