--- a/src/app/pages/box-sign-demo/box-sign-demo.component.html
+++ b/src/app/pages/box-sign-demo/box-sign-demo.component.html
@@ -3,11 +3,11 @@
     <div class="p-2">Component 2</div>
     <div class="p-2">Component 3</div>
     <div class="p-2 ml-auto">
-        <button type="button" class="btn btn-light" (click)="createContract()">
+        <button type="button" class="btn btn-light" (click)="createSignatureRequest()">
             <ng-icon name="bootstrapPlus"></ng-icon>
         </button>
     </div>
 </div>
-<div class="h-100"> 
-    <app-contract-list></app-contract-list>
+<div class="h-100">
+    <app-list-signature-requests></app-list-signature-requests>
 </div>
